# GDUT_RC2026_R2

./: .gitignore  .mxproject  RC2026.ioc  README.md  example.cpp  speed_plan.cpp  speed_plan.h
Backup/Inc/: RC_adrc.h  RC_auto_arm.h  RC_chassis_jack.h  RC_omni_chassis.h  RC_ros_arm.h
Backup/Src/: RC_adrc.cpp  RC_omni_chassis.cpp
Core/Inc/: stm32f4xx_it.h
Core/Src/: can.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
Data_Collect/: P100_D20.csv  P110_D20.csv  P120_D20.csv  P130_D20.csv  P60_D20.csv  P70_D20.csv  P80_D20.csv  P90_D20.csv  test.csv  数据汇总.xlsx
GDUT_RC2026_R2-main/: .gitignore  README.md
GDUT_RC2026_R2-main/MATLAB/: TD.slx  TD.slxc  hfst.m  main.cpp  wheel_leg_lqr.m
Inc/: RC_LiDAR.h  RC_arm.h  RC_auto_arm.h  RC_filter.h  RC_gantry.h  RC_get_KFS.h  RC_suction.h  RC_vector2d.h
KFS/: process_placements.py  spacetime_simulation.py
MATLAB/: lqr.asv  lqr.m  untitled.m  wheel_leg_lqr.m
MDK-ARM/: RC2026.uvguix.60275  RC2026.uvguix.liaoy  RC2026.uvoptx  RC2026.uvprojx
MDK-ARM/RC2026/: RC2026.axf  RC2026.hex  (+69 more)
Python/: Polyfit.py
RC2026_F4/: RC2026.ioc
RC2026_H7/: .mxproject  RC2026.ioc
RC2026_H7_wheel_leg/: .mxproject
Src/: RC_JY901S.cpp  RC_arm.cpp  RC_auto_arm.cpp  RC_gantry.cpp  RC_get_KFS.cpp
matlab_tool/: LQR_control.slx  LQRfitting.m  angle_calc.m  forwardKinematics.m  inverseKinematics.m  my_test.m  wheel_control.m
nine_square_strategy/: CMakeLists.txt  package.xml
strategy_test/RC_2026/: CMakeLists.txt  main.cpp
strategy_test/RC_2026/include/Nine_Square/: Game_Strategy.h
strategy_test/RC_2026/src/Nine_Square/: Game_Strategy.cpp
(+2098 files in other folders)
